--- a/index.html
+++ b/index.html
@@ -2627,7 +2627,7 @@
             awardBadge.innerHTML = '<i class="fas fa-award"></i>';
             awardBadge.style.position = 'absolute';
             awardBadge.style.top = '80px';  // Position it where visible but not intrusive
-            awardBadge.style.right = '20px';
+            awardBadge.style.left = '20px';
             awardBadge.style.backgroundColor = '#F5A623';
             awardBadge.style.color = 'white';
             awardBadge.style.width = '50px';
@@ -2645,7 +2645,7 @@
             awardBadge.addEventListener('mouseenter', (e) => {
                 tooltipElement.innerHTML = `
                     <div class="tooltip-title">Emerging Talent Award</div>
-                    <div class="tooltip-description">Recognized for exceptional contributions at Texas Instruments, 2025</div>
+                    <div class="tooltip-description">Recognized for exceptional contributions at Texas Instruments, 2024</div>
                 `;
                 tooltipElement.style.left = `${e.clientX}px`;
                 tooltipElement.style.top = `${e.clientY - 70}px`;
@@ -3351,7 +3351,7 @@
                     
                     <div style="margin-top: 1.5rem; padding: 1.2rem; background: linear-gradient(135deg, rgba(245, 166, 35, 0.3) 0%, rgba(156, 39, 176, 0.3) 100%); border-radius: 8px; border-left: 4px solid #F5A623;">
                         <h3><i class="fas fa-award" style="color: #F5A623; margin-right: 0.5rem;"></i>Recent Achievement</h3>
-                        <p><strong>Emerging Talent Award</strong> - Texas Instruments, 2025</p>
+                        <p><strong>Emerging Talent Award</strong> - Texas Instruments, 2024</p>
                         <p>Recognized for exceptional contributions to AI integration in hardware verification workflows and demonstrating outstanding potential in bridging ML and hardware engineering.</p>
                     </div>
 
