--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
     <!-- Loading Screen -->
     <div class="loading-screen" id="loading-screen">
         <div class="circuit-loader"></div>
-        <div class="loading-text">Initializing Neural Circuit Interface</div>
+        <div class="loading-text">Initializing...</div>
         <div class="loading-progress">
             <div class="progress-bar" id="progress-bar"></div>
         </div>
@@ -2576,7 +2576,7 @@
         // Start the initialization sequence with proper timing
         function startInitSequence() {
             setTimeout(() => {
-                console.log("Initializing neural circuit...");
+                console.log("Initializing page...");
                 progressBar.style.width = '50%';
                 
                 // Initialize neural circuit
