--- a/index.html
+++ b/index.html
@@ -3679,7 +3679,7 @@
                     <h3>Education</h3>
                     <p><strong>Motilal Nehru National Institute of Technology, Prayagraj</strong><br>
                     Bachelor of Technology - Electronics and Communication Engineering<br>
-                    Expected 2024 | GPA: 8.05</p>
+                    2020-2024 | GPA: 8.05</p>
                 </div>
                 
                 <div class="section-container">
@@ -4968,7 +4968,7 @@
     <div class="job">
         <div class="job-title">Bachelor of Technology - Electronics and Communication Engineering</div>
         <div class="job-company">Motilal Nehru National Institute of Technology, Prayagraj, India</div>
-        <div class="job-date">Expected 2024 | GPA: 8.05</div>
+        <div class="job-date">2020-2024 | GPA: 8.05</div>
     </div>
 </div>
 
