--- a/index.html
+++ b/index.html
@@ -2204,7 +2204,7 @@
             //     category: 'ml',
             //     icon: 'fa-shield-halved',
             //     description: 'Research paper on GNN for hardware fault prediction and analysis',
-            //     impact: 'Paper under review for VLSID',
+            //     impact: 'Presented the Paper in VLSID Conference 2025',
             //     year: 2024,
             //     skills: ['gnn', 'verification', 'python'],
             //     detailContent: `
@@ -2218,7 +2218,7 @@
             //             <li>Developed graph-based representation of hardware components and failure pathways</li>
             //             <li>Implemented GNN algorithms to improve fault prediction accuracy</li>
             //             <li>Created automated methodologies for intelligent fault injection</li>
-            //             <li>Paper submitted and under review for VLSID conference</li>
+            //             <li>Presented the Paper in VLSID Conference 2025</li>
             //         </ul>
                     
             //         <div class="paper-abstract">
@@ -2463,7 +2463,7 @@
                 category: 'research',
                 icon: 'fa-file-alt',
                 description: 'Improving Failure Mode Analysis and Fault Injection Using GNN Algorithms',
-                status: 'Under Review - VLSID Conference',
+                status: 'Presented the Paper in VLSID Conference 2025',
                 year: 2024,
                 skills: ['gnn', 'verification', 'python'],
                 detailContent: `
